<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterPage"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/slide2"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp"
            tools:srcCompat="@tools:sample/avatars[5]" />


        <ImageButton
            android:id="@+id/cambtn"
            android:layout_width="wrap_content"
            android:layout_marginTop="120dp"
            android:layout_height="wrap_content"
            android:src="@drawable/edit" />
    </LinearLayout>



    <EditText
        android:id="@+id/reg_name"
        android:layout_width="200dp"
        android:layout_marginTop="50dp"
        android:layout_height="wrap_content"
        android:paddingLeft="3dp"
        android:ems="10"
        android:drawableLeft="@drawable/user"
        android:inputType="textPersonName"
        android:hint="@string/name" />

    <EditText
        android:id="@+id/reg_emailid"
        android:layout_width="200dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:paddingLeft="3dp"
        android:ems="10"
        android:drawableLeft="@drawable/email"
        android:inputType="textPersonName"
        android:hint="@string/email_id" />

    <EditText
        android:id="@+id/reg_password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName"
        android:paddingLeft="3dp"
        android:password="true" />

    <EditText
        android:id="@+id/reg_confirmPassword"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/password"
        android:ems="10"
        android:paddingLeft="3dp"
        android:password="true"
        android:hint="@string/confirm_password" />

    <Button
        android:id="@+id/reg_registerBtn"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:text="@string/signup"
        android:background="#fff"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_member"/>


        <TextView
            android:id="@+id/reg_SignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/signin"
            android:textColor="#4CAF50"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>